--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,14 +1,15 @@
 .container{
     position: relative;
-    height: 400px;
+    height: 100%;
     width: 100%;
     background-image: url('https://i.ibb.co/ZxMKLQr/Screenshot-6.png');
     background-size: cover;
     background-repeat: no-repeat;
+
 }
 .overly{
     width: 100%;
-    height: 400px;
+    height: 100px;
     background-color: rgba(0,0,0,0.3);
 }
 
